# Compressor

./: .gitignore  README.md  aggregate_telemetry.py  apply_phase1_metadata_PERMANENT_FIXED.py  fix_estimate_overload.py  fix_phase1_build.py  fix_remaining_estimate_call.py  gradle.properties  settings.gradle.kts
.github/workflows/: android-ci.yml  android.yml  mt-localizer-build.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  vmaf_jni.c
docs/: DEBUG_SIGNING.md  S23_ULTRA_DEVICE_SCAN_FINDINGS.md  STABLE_SIGNING.md  s23-ultra-batch-shizuku-roadmap.md
docs/copilot/: codex-review-pr19-2026-07-08.md
docs/post-pr23/: AUDIT_TRIAGE.md  CONTINUATION_HANDOFF_20260717.md  DEVICE_VALIDATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.json  PERF001_DECISION_JOURNAL.md  REMUX_FAST_PATH_RESULTS.md  RUNTIME_EVALUATION.md  SKIP_AUDIT_FINDINGS.md  SPEED_SCOPING.md
docs/pr23/: AGENT_HANDOFF.md  CAPTURE_INTEGRITY_REPORT.md  DATA_GAPS.md  DECISION_LOG.md  DEEP_RESEARCH_FINDINGS.md  EXECUTIVE_FINDINGS.md  FRESH_RUN_PER_JOB.csv  HANDOFF_LATENCY_REPORT.md  NEXT_VALIDATION_PLAN.md  PATCH_AND_TEST_REPORT.md  POST_VALIDATION_QUEUE.md  PR23_BASELINE_COMPARISON.md  REMUX_ACCELERATION_INVESTIGATION.md  REPOSITORY_BUILD_IDENTITY.md  SCHEMA_AND_EXTRACTOR_AUDIT.md  SOURCE_BIBLIOGRAPHY.md  STATISTICAL_ANALYSIS.md  VERIFICATION_EVIDENCE.json  VERIFICATION_RESULTS.md  VMAF_CURRENT_IMPLEMENTATION_AUDIT.md  VMAF_V1_INTEGRATION_PLAN.md
gradle/: libs.versions.toml
research/perceptual_calibration/: NEXT_ROUND_INSTRUMENTATION.md  README.md  REVIEW_FINDINGS.md
(+130 files in other folders)
